# Merton-ctrl

./: .gitignore  README.md  pyproject.toml  requirements.txt
paper/: Paper.tex
results/: closed_form_summary.json
results/ablations/mlp_beta_dtd_20k_lr3e-4/: checkpoint.pt  summary.json
results/ablations/mlp_beta_dtd_beta0p01_narrow_1k/: checkpoint.pt  summary.json
results/ablations/mlp_td_20k_lr3e-4/: checkpoint.pt  summary.json
results/ablations/vanilla_beta_dtd_10k_lr1e-3/: checkpoint.pt  summary.json
results/ablations/vanilla_beta_dtd_midrange_10k_lr1e-3/: checkpoint.pt  summary.json
results/baselines/dtd_sigma0p20_daily/: checkpoint.pt  summary.json
results/baselines/dtd_sigma0p20_quarterly/: checkpoint.pt  summary.json
results/dtd/: checkpoint.pt  summary.json
results/dtd_quarterly/: checkpoint.pt  summary.json
results/mlp_beta_fixed/: checkpoint.pt  summary.json
results/mlp_beta_smallbeta_narrow/: checkpoint.pt  summary.json
results/mlp_td_fixed/: checkpoint.pt  summary.json
results/new_params_dtd_vanilla_mlp/: checkpoint.pt  summary.json
results/td/: checkpoint.pt  summary.json
results/train_critic/: checkpoint.pt  summary.json
results/vanilla_beta_dtd/: checkpoint.pt  summary.json
results/vanilla_td_midrange/: checkpoint.pt  summary.json
scripts/: check_closed_form.py  sweep_policies.py  train_critic.py
src/merton_dtd/: __init__.py  config.py  critic.py  eval.py  losses.py  merton.py  plotting.py  rl_pinn.py  sampling.py  sweep.py  training.py
src/merton_dtd_local.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
(+86 files in other folders)
